feat(transactions): send payTo object and improve edit drawer UX
